force-app/main/default/objects/C_Dependency__c/C_Dependency__c.object-meta.xml
<CustomObject>
    <description>Conditional logic - controls visibility of pages, sections, or questions based on response selection</description>
    <label>Dependency</label>
    <nameField>
        <displayFormat>DEP-{0000}</displayFormat>
        <label>Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>