force-app/main/default/objects/C_Dependency__c/fields/C_Action__c.field-meta.xml
<CustomField>
    <fullName>C_Action__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
                <default>true</default>
                <label>Hide</label>
            </value>
            <value>
                <fullName>Require</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>