force-app/main/default/objects/C_Dependency__c/fields/C_Controlling_Response__c.field-meta.xml
<CustomField>
    <fullName>C_Controlling_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Controlling Response</label>
    <referenceTo>C_Response__c</referenceTo>
    <relationshipLabel>Dependencies</relationshipLabel>
    <relationshipName>C_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>