force-app/main/default/objects/C_Dependency__c/fields/C_Logic_Group__c.field-meta.xml
<CustomField>
    <fullName>C_Logic_Group__c</fullName>
    <label>Logic Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>