force-app/main/default/objects/C_Dependency__c/fields/C_Logic_Operator__c.field-meta.xml
<CustomField>
    <fullName>C_Logic_Operator__c</fullName>
    <label>Logic Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OR</fullName>
                <default>true</default>
                <label>OR</label>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>