force-app/main/default/objects/C_Dependency__c/fields/C_Target_Category__c.field-meta.xml
<CustomField>
    <fullName>C_Target_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Category</label>
    <referenceTo>C_Category__c</referenceTo>
    <relationshipLabel>Dependencies (Target Category)</relationshipLabel>
    <relationshipName>C_Dependencies_Category</relationshipName>
    <type>Lookup</type>
</CustomField>