force-app/main/default/objects/C_Dependency__c/fields/C_Target_Page__c.field-meta.xml
<CustomField>
    <fullName>C_Target_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Page</label>
    <referenceTo>C_Page__c</referenceTo>
    <relationshipLabel>Dependencies</relationshipLabel>
    <relationshipName>C_Dependencies_Page</relationshipName>
    <type>Lookup</type>
</CustomField>