force-app/main/default/objects/C_Dependency__c/fields/C_Target_Question__c.field-meta.xml
<CustomField>
    <fullName>C_Target_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Question</label>
    <referenceTo>C_Question__c</referenceTo>
    <relationshipLabel>Dependencies (Question)</relationshipLabel>
    <relationshipName>C_Dependencies_Question</relationshipName>
    <type>Lookup</type>
</CustomField>