force-app/main/default/objects/C_Dependency__c/fields/C_Target_Section__c.field-meta.xml
<CustomField>
    <fullName>C_Target_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Section</label>
    <referenceTo>C_Section__c</referenceTo>
    <relationshipLabel>Dependencies (Section)</relationshipLabel>
    <relationshipName>C_Dependencies_Section</relationshipName>
    <type>Lookup</type>
</CustomField>