force-app/main/default/objects/C_Dependency__c/fields/C_Target_Type__c.field-meta.xml
<CustomField>
    <fullName>C_Target_Type__c</fullName>
    <label>Target Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Page</fullName>
            </value>
            <value>
                <fullName>Section</fullName>
                <default>true</default>
                <label>Section</label>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>