force-app/main/default/objects/C_Dependency__c/listViews/All_Dependencies.listView-meta.xml
<ListView>
    <fullName>All_Dependencies</fullName>
    <columns>NAME</columns>
    <columns>C_Controlling_Response__c</columns>
    <columns>C_Target_Type__c</columns>
    <columns>C_Action__c</columns>
    <columns>C_Logic_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Dependencies</label>
</ListView>